<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="0"
                android:text="@string/nome"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/editTextNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_row="0"
                android:ems="10"
                android:hint="@string/nome"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_row="1"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="1"
                android:text="@string/email" />

            <TextView
                android:id="@+id/textViewTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:text="@string/telefone" />

            <EditText
                android:id="@+id/editTextTelefone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_row="2"
                android:ems="10"
                android:hint="@string/telefone"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:text="@string/celular" />

            <EditText
                android:id="@+id/editTextCelular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_row="3"
                android:ems="10"
                android:hint="@string/celular"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textViewEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="4"
                android:text="@string/empresa" />

            <EditText
                android:id="@+id/editTextEmpresa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_row="4"
                android:ems="10"
                android:hint="@string/empresa"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_marginTop="10dp"
                android:layout_row="5"
                android:ems="10"
                android:hint="@string/site"
                android:inputType="textUri" />

            <TextView
                android:id="@+id/textViewSite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="5"
                android:text="@string/site" />

            <TextView
                android:id="@+id/textViewMensagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:layout_row="6"
                android:text="@string/mensagem" />

            <EditText
                android:id="@+id/editTextMensagem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:layout_row="6"
                android:ems="10"
                android:gravity="fill_horizontal"
                android:inputType="textMultiLine"
                android:lines="4" />

            <ImageButton
                android:id="@+id/imageButtonEnviar"
                android:layout_width="71dp"
                android:layout_height="56dp"
                android:layout_column="1"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_row="7"
                android:background="@drawable/logo"
                android:contentDescription="@string/enviar"
                app:srcCompat="@drawable/logo"
                tools:ignore="RtlHardcoded" />

        </GridLayout>
</ScrollView>

</GridLayout>